# poseidon-preimage

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
circuits/: circuit.circom
contract/: Cargo.toml
contract/src/: lib.rs
res/: circuit.zkey  contract.wasm  input.json  proof.json  verification_key.json
res/circuit_js/: circuit.wasm
src/: lib.rs
tests/: poseidoner.js
